hot-fix grid gap issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,17 +28,15 @@ body {
 
 nav {
 	height: 3em;
-	display: grid;
-	grid-template-rows: 1fr;
 	max-width: 100%;
+	margin-left: auto;
 	padding: 0.8%;
 }
 	nav #links {
+		background-color: #ff3960;
 		display: grid;
-		grid-template-columns: repeat(3, auto);
-		column-gap: 5%;
+		grid-template-columns: repeat(5, auto);
 		justify-self: end;
-		padding-right: 0.8%;
 	}
 
 #links > div:hover * {
